# Slice-N-Dice

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  config.ini  pyproject.toml
.github/workflows/: lint.yml  pylint.yml  secret-scan.yml  test.yml
Decryptor/: Serve.py
Decryptor/templates/: SideLoadMe.html
Download/Decryptor/: requirements.txt
Download/Decryptor/templates/: SideLoadMe.html
Download/Encryptors/python/: slice.py
Encryptors/python/: Slice.py  requirements.txt
Side_Load/Decryptor/: requirements.txt  serve.py
Side_Load/Decryptor/templates/: SideLoadMe.html
Side_Load/Encryptors/cs/Dice.cs/: Dice.cs.sln
Side_Load/Encryptors/cs/Dice.cs/Dice.cs/: Dice.cs.csproj  Program.cs  stylecop.json
Side_Load/Encryptors/python/: decrypt.py  slice.py
Upload/Flask/: config.ini  serve.py
Upload/Flask/templates/: index.html  upload.html
tests/: conftest.py  test_decrypt.py  test_secrets.py  test_sideload_serve.py  test_slice.py  test_upload_serve.py
